Move Title to top of timeline and fix CSS spacing between timeline items to make it more compact.
git-svn-id: https://teamsupport.svn.beanstalkapp.com/main/trunk@3163 02885c34-e171-44ab-8435-42fb7a3c3aaf

--- a/WebApp/Resources/Pages/TicketPage.css
+++ b/WebApp/Resources/Pages/TicketPage.css
@@ -32,8 +32,6 @@
     }
 
     .ticket-toolbar-row {
-      padding-left: 5px;
-      padding-right: 5px;
       background-color: #f5f5f5;
       position: fixed;
       width: 100%;
@@ -41,10 +39,7 @@
       box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15);
     }
 
-    .ticket-toolbar {
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
+    .ticket-toolbar { margin-top: 10px; margin-bottom: 10px; }
 
     button.ticket-option { background-color: white; }
 
@@ -101,13 +96,13 @@
     
     .timeline > span.daybadge {
         position: relative;
-        top: -10px;
         z-index: 1;
         display: block;
         margin-left: auto;
         margin-right: auto;
         width: 70px;
         padding: 5px;
+        margin-bottom: 5px;
         font-size: 11px;
         font-weight: normal;
     }
@@ -119,7 +114,8 @@
     .timeline > li.action-new > div.panel > p { display: table-cell; padding: 0 20px; vertical-align: middle;  height: 48px; }
 
     .timeline > li {
-        margin-bottom: 20px;
+        margin-bottom: 10px;
+          margin-bottom: 10px;
         position: relative;
         background-color:white;
     }
